Refactoring for better maintainablity
Use chatResponse instead of content for agent tool calling