@@ -7,13 +7,14 @@ import com.bookshop.catalog.web.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.document.Document;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.MapBindingResult;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @Service
 @Slf4j
@@ -22,31 +23,38 @@ public class BookService {
     private final BookMapper bookMapper;
     private final BookEventPublisher bookEventPublisher;
     private final BookValidator bookValidator;
-    private final BookSearchService bookSearchService;
+    private final VectorStoreService vectorStoreService;
 
 
-    public BookService(BookRepository bookRepository, BookMapper bookMapper, BookEventPublisher bookEventPublisher, BookValidator bookValidator, BookSearchService bookSearchService) {
+    public BookService(BookRepository bookRepository,
+                       BookMapper bookMapper,
+                       BookEventPublisher bookEventPublisher,
+                       BookValidator bookValidator,
+                       VectorStoreService vectorStoreService) {
         this.bookRepository = bookRepository;
         this.bookMapper = bookMapper;
         this.bookEventPublisher = bookEventPublisher;
         this.bookValidator = bookValidator;
-        this.bookSearchService = bookSearchService;
+        this.vectorStoreService = vectorStoreService;
     }
 
-    @Cacheable(cacheNames = "books", key = "'ALL'")
-    public Iterable<BookResponse> viewBooks() {
+    @Cacheable(cacheNames = "books", key = "'ALL'", sync = true)
+    public List<BookResponse> viewBooks() {
         var books = bookRepository.findAll();
         return books.stream()
                 .map(bookMapper::toBookResponse)
                 .toList();
     }
 
-    @Cacheable(cacheNames = "booksByIsbn", key = "#isbn")
+    // sync = true avoid concurrent cache misses, only one request get the data from DB
+    // other requests are waiting for the cache to populate and gets the data from cache
+    // instead every parallel request calls DB.
+    @Cacheable(cacheNames = "booksByIsbn", key = "#isbn", sync = true)
     public BookResponse viewBookDetails(String isbn) {
         return bookRepository.findByIsbn(isbn)
                 .map(bookMapper::toBookResponse)
                 .orElseThrow(() ->
-                        new BookNotFoundException("The Book with ISBN " + isbn + " was not found"));
+                        new BookNotFoundException("The Book with ISBN %s was not found".formatted(isbn)));
     }
 
     @Transactional
@@ -54,7 +62,7 @@ public class BookService {
         return switch (bookRepository.existsByIsbn(bookRequest.isbn())) {
             case false -> saveAndPublishBookEvents(bookMapper.toEntity(bookRequest), BookEventType.BOOK_CREATED);
             case true ->
-                    throw new BookAlreadyExistsException("The Book with ISBN " + bookRequest.isbn() + " already exists");
+                    throw new BookAlreadyExistsException("The Book with ISBN %s already exists".formatted(bookRequest.isbn()));
         };
     }
 
@@ -68,9 +76,9 @@ public class BookService {
     public BookResponse editBook(String isbn, UpdateBookRequest bookRequest) {
         return bookRepository.findByIsbn(isbn)
                 .map(existingBook ->
-                        saveAndPublishBookEvents(bookMapper.toUpdatedEntity(existingBook, bookRequest),
+                        saveAndPublishBookEvents(bookMapper.toEntity(existingBook, bookRequest),
                                 BookEventType.BOOK_UPDATED))
-                .orElseThrow(() -> new BookNotFoundException("The Book with ISBN " + isbn + " was not found"));
+                .orElseThrow(() -> new BookNotFoundException("The Book with ISBN %s was not found".formatted(isbn)));
     }
 
     public BookResponse editBookPartial(String isbn, Map<String, Object> updates) {
@@ -84,7 +92,7 @@ public class BookService {
                 .map(book -> toUpdatedBook(book, updates))
                 .map(bookRepository::save)
                 .map(bookMapper::toBookResponse)
-                .orElseThrow(() -> new BookNotFoundException("The Book with ISBN " + isbn + " not found"));
+                .orElseThrow(() -> new BookNotFoundException("The Book with ISBN %s not found".formatted(isbn)));
     }
 
     private Book toUpdatedBook(Book existingBook, Map<String, Object> updates) {
@@ -101,27 +109,60 @@ public class BookService {
     }
 
     public List<BookResponse> getBooksByIsbns(List<String> isbns) {
-        log.info("getBooksByIsbns({})", isbns);
+        log.info("Getting books by ISBNs: {}", isbns);
         return bookRepository.findAllByIsbnIn(isbns).stream()
                 .map(bookMapper::toBookResponse)
                 .toList();
     }
 
     public List<BookResponse> search(String query) {
+        log.info("Searching for books with query: {}", query);
+        try {
+            // Phase 1: Vector Space Search (Might throw VectorStoreException)
+            List<Document> documents = vectorStoreService.vectorStoreSearch(query);
+            log.info("Books Search results Count- [{}] ", documents.size());
+            if (documents.isEmpty()) {
+                return List.of();
+            }
+            List<String> isbns = documents.stream()
+                    .map(this::extractIsbn)
+                    .flatMap(Optional::stream)
+                    .distinct()
+                    .toList();
 
-        log.info("search({})", query);
-        List<Document> documents = bookSearchService.searchVectorstore(query);
-        log.info("documents count from vectorStore - {} ", documents.size());
-        if (documents.isEmpty()) {
-            return Collections.emptyList();
+            if (isbns.isEmpty()) {
+                log.warn("Vector search returned {} document(s), but no valid ISBN metadata was found", documents.size());
+                return List.of();
+            }
+
+            return getBooksByIsbns(isbns);
+            // use pattern patching switch expression to handle each exception types
+        } catch (Throwable cause) {
+            throw switch (cause) {
+                case VectorStoreException vectorStoreException -> {
+                    log.error("Vector store search failed: {}", vectorStoreException.getMessage(), vectorStoreException);
+                    yield new BookSearchException("Failed to search for books due to vector store error", vectorStoreException);
+                }
+                case DataAccessException dataAccessException -> {
+                    log.error("Database access error during book search: {}", dataAccessException.getMessage(), dataAccessException);
+                    yield new BookSearchException("Failed to search for books due to database access error", dataAccessException);
+                }
+                case Throwable throwable -> {
+                    log.error("Unexpected error during book search: {}", throwable.getMessage(), throwable);
+                    yield new BookSearchException("Failed to search for books due to an unexpected error", throwable);
+                }
+            };
         }
-        List<String> isbns = documents.stream()
-                .map(doc -> (String) doc.getMetadata().get("isbn"))
-                .distinct()
-                .toList();
-        log.info("isbn metadata from vectorStore - [{}] ", isbns);
+    }
 
-        return getBooksByIsbns(isbns);
-
+    private Optional<String> extractIsbn(Document document) {
+        var isbn = document.getMetadata().get("isbn");
+        if (isbn == null) {
+            return Optional.empty();
+        }
+        var value = isbn.toString().strip();
+        return value.isEmpty()
+                ? Optional.empty()
+                : Optional.of(value);
     }
 }
